Content update to SFF 2017/18 eu continuing
This commit the following change.

CHANGE

To apply for a Tuition Fee Loan use form EUPR1A.

TO

To apply for a Tuition Fee Loan use form EUPR1A.

The EUPR1A is for EU students studying in England only.

I have included the regression test artefacts within to
show areas affected by these changes

Based on the above, I have reviewed the changes to the
regression test artefacts and they appear as expected.

Already existing unit, regression and integration tests
passed, giving assurance that the aforementioned commit/changes
have had no (interfering) effect to other smart answers.

--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_ft_1718_continuing.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_ft_1718_continuing.govspeak.erb
@@ -6,6 +6,8 @@
 
   To apply for a Tuition Fee Loan use form EUPR1A.
 
+  The EUPR1A is for EU students studying in England only.
+
   Academic year | Form
   - | -
   2017 to 2018 | [EUPR1A - form (PDF, 108KB)](http://media.slc.co.uk/sfe/1718/eu/eu_eupr1a_form_1718_d.pdf)
