--- a/lib/smart_answer_flows/am-i-getting-minimum-wage/outcomes/current_payment_below.govspeak.erb
+++ b/lib/smart_answer_flows/am-i-getting-minimum-wage/outcomes/current_payment_below.govspeak.erb
@@ -22,4 +22,7 @@
   If you work overtime or your employer provides you with [accommodation](/national-minimum-wage-accommodation), this has been added to the calculation.
 
   <%= render partial: 'shared/minimum_wage/acas_information.govspeak.erb' %>
+
+  You can also [make a complaint to HM Revenue and Customs (HMRC)](/government/publications/pay-and-work-rights-complaints) about your employer or employment agency or complain on behalf of someone else.
+
 <% end %>
