--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_ft_1718_new.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_ft_1718_new.govspeak.erb
@@ -16,10 +16,10 @@
 
   Form | When to use the form
   - | -
-  [EUTFLR - form (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_tfl_request_form_1718_d.pdf)  | To change the amount of loan you want to apply for
-  [Evidence factsheet (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_evidence_fs_1718_d.pdf) | List of evidence to send with your application - for example, proof of identity or income
-  [Certifier checklist (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_certifier_checklist_form_1718_d.pdf) | Get the person who verifies your evidence to sign this form
-  [EUCO1 - form (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_euco1_form_1718_d.pdf) | To update your course, name and other details
+  [EUTFLR - form (PDF, 40KB)](http://media.slc.co.uk/sfe/1718/eu/eu_tfl_request_form_1718_d.pdf)  | To change the amount of loan you want to apply for
+  [Evidence factsheet (PDF, 79KB)](http://media.slc.co.uk/sfe/1718/eu/eu_evidence_fs_1718_d.pdf) | List of evidence to send with your application - for example, proof of identity or income
+  [Certifier checklist (PDF, 59KB)](http://media.slc.co.uk/sfe/1718/eu/eu_certifier_checklist_form_1718_d.pdf) | Get the person who verifies your evidence to sign this form
+  [EUCO1 - form (PDF, 137KB)](http://media.slc.co.uk/sfe/1718/eu/eu_euco1_form_1718_d.pdf) | To update your course, name and other details
 
   <%= render partial: 'when_you_can_apply.govspeak.erb' %>
 
