Open new nav surveys in a new window

--- a/app/views/smart_answers/show.html.erb
+++ b/app/views/smart_answers/show.html.erb
@@ -17,7 +17,7 @@
       locals: {
         message: <<-MESSAGE
         This is a test version of the layout of this page.
-        <a id='taxonomy-survey' href='https://www.smartsurvey.co.uk/s/betasurvey2017'>
+        <a id='taxonomy-survey' href='https://www.smartsurvey.co.uk/s/betasurvey2017' target='_blank' rel='noopener noreferrer'>
           Take the survey to help us improve it
         </a>
         MESSAGE
