Add 2017-2018 tax year to additional_pat_pay
Add text pertaining to the 2017-2018 tax year to the 
`additional_pat_pay` outcome partial template.

I am re-using the 2017-2018 tax year calculator function.

--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
@@ -27,3 +27,9 @@ Weekly rate (between 6 April 2015 and 5 April 2016) | £139.58, or 90% of their 
 Weekly rate (between 6 April 2016 and 5 April 2017) | £139.58, or 90% of their average weekly earnings (whichever is lower).
 
 <% end %>
+
+<% if calculator.range_in_2017_2018_fin_year? %>
+
+Weekly rate (between 6 April 2017 and 5 April 2018) | £140.98, or 90% of their average weekly earnings (whichever is lower).
+
+<% end %>
