--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
@@ -16,9 +16,9 @@ Mother’s shared parental pay (between 6 April 2015 and 5 April 2016) | £139.5
 
 <% end %>
 
-<% if !calculator.range_in_2014_2015_fin_year? && !calculator.range_in_2015_2016_fin_year? %>
+<% if calculator.range_in_2016_2017_fin_year? %>
 
-Mother’s shared parental pay (between 6 April 2015 and 5 April 2016) | £139.58 per week or 90% of their average weekly earnings (before tax), whichever is lower
+Mother’s shared parental pay (between 6 April 2016 and 5 April 2017) | £139.58 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
 
@@ -34,8 +34,8 @@ Partner's shared parental pay (between 6 April 2015 and 5 April 2016) | £139.58
 
 <% end %>
 
-<% if !calculator.range_in_2014_2015_fin_year? && !calculator.range_in_2015_2016_fin_year? %>
+<% if calculator.range_in_2016_2017_fin_year? %>
 
-Partner's shared parental pay (between 6 April 2015 and 5 April 2016) | £139.58 per week or 90% of their average weekly earnings (before tax), whichever is lower
+Partner's shared parental pay (between 6 April 2016 and 5 April 2017) | £139.58 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
