--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
@@ -22,6 +22,12 @@ Mother’s shared parental pay (between 6 April 2016 and 5 April 2017) | £139.5
 
 <% end %>
 
+<% if calculator.range_in_2017_2018_fin_year? %>
+
+Mother’s shared parental pay (between 6 April 2017 and 5 April 2018) | £140.98 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
 <% if calculator.range_in_2014_2015_fin_year? %>
 
 Partner's shared parental pay (between 6 April 2014 and 5 April 2015) | £138.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
@@ -37,5 +43,11 @@ Partner's shared parental pay (between 6 April 2015 and 5 April 2016) | £139.58
 <% if calculator.range_in_2016_2017_fin_year? %>
 
 Partner's shared parental pay (between 6 April 2016 and 5 April 2017) | £139.58 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
+<% if calculator.range_in_2017_2018_fin_year? %>
+
+Partner's shared parental pay (between 6 April 2017 and 5 April 2018) | £140.98 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
