--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_parent_partner_1718.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_parent_partner_1718.govspeak.erb
@@ -16,7 +16,7 @@
   Academic year | Form
   - | -
   2017 to 2018 | [PFF2 - income details form (PDF, 245KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_pff2_form_1718_d.pdf)
-  2017 to 2018 | CYI - current tax year income assessment form (available in April 2017)
+  2017 to 2018 | [CYI - current tax year income assessment form (PDF, 566KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_cyi_form_1718_d.pdf)
 
   %Income means your [household income](/apply-for-student-finance/household-income).%
 
