--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718_pt.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718_pt.govspeak.erb
@@ -8,8 +8,8 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [DSA1 - full form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
-  2017 to 2018 | [DSA1 - guidance notes (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_notes_1718_d.pdf)
+  2017 to 2018 | [DSA1 - full form (PDF, 662KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
+  2017 to 2018 | [DSA1 - guidance notes (PDF, 78KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_notes_1718_d.pdf)
 
 
   <%= render partial: 'where_to_send_your_forms_uk.govspeak.erb' %>
