--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_pt_1718_new.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_pt_1718_new.govspeak.erb
@@ -8,17 +8,17 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [EUPTL1 - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_ptl1_form_1718_d.pdf)
-  2017 to 2018 | [EUPTL1 - guidance notes (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_ptl1_notes_1718_d.pdf)
+  2017 to 2018 | [EUPTL1 - form (PDF, 210KB)](http://media.slc.co.uk/sfe/1718/eu/eu_ptl1_form_1718_d.pdf)
+  2017 to 2018 | [EUPTL1 - guidance notes (PDF, 590KB)](http://media.slc.co.uk/sfe/1718/eu/eu_ptl1_notes_1718_d.pdf)
 
   ## Additional information
 
   Form | When to use the form
   - | -
-  [EUTFLR - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_tfl_request_form_1718_d.pdf) | To change the amount of loan you want to apply for
-  [Evidence factsheet (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_evidence_fs_1718_d.pdf) | List of evidence to send with your application, eg proof of identity or income
-  [Certifier checklist (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_certifier_checklist_form_1718_d.pdf) | Get the person who verifies your evidence to sign this form
-  [EUCO1 - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/eu/eu_euco1_form_1718_d.pdf) | To update your course, name and other details
+  [EUTFLR - form (PDF, 441KB)](http://media.slc.co.uk/sfe/1718/eu/eu_tfl_request_form_1718_d.pdf) | To change the amount of loan you want to apply for
+  [Evidence factsheet (PDF, 82KB)](http://media.slc.co.uk/sfe/1718/eu/eu_evidence_fs_1718_d.pdf) | List of evidence to send with your application, eg proof of identity or income
+  [Certifier checklist (PDF, 60KB)](http://media.slc.co.uk/sfe/1718/eu/eu_certifier_checklist_form_1718_d.pdf) | Get the person who verifies your evidence to sign this form
+  [EUCO1 - form (PDF, 116KB)](http://media.slc.co.uk/sfe/1718/eu/eu_euco1_form_1718_d.pdf) | To update your course, name and other details
 
   <%= render partial: 'when_you_can_apply.govspeak.erb' %>
 
