--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_new.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_new.govspeak.erb
@@ -9,8 +9,8 @@
   Academic Year | Form
   - | -
   2017 to 2018 | [Apply online](/apply-online-for-student-finance)
-  2017 to 2018 | [PTL1 - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/pt/sfe_ptl1_form_1718_d.pdf)
-  2017 to 2018 | [PTL1 - guidance notes (PDF, XXKB)](http://media.slc.co.uk/sfe/1718/pt/sfe_ptl1_notes_1718_d.pdf)
+  2017 to 2018 | [PTL1 - form (PDF, 237KB)](http://media.slc.co.uk/sfe/1718/pt/sfe_ptl1_form_1718_d.pdf)
+  2017 to 2018 | [PTL1 - guidance notes (PDF, 98KB)](http://media.slc.co.uk/sfe/1718/pt/sfe_ptl1_notes_1718_d.pdf)
 
   <%= render partial: 'when_you_can_apply.govspeak.erb' %>
 
