--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_local/_same_sex.govspeak.erb
@@ -5,15 +5,11 @@ Contact the [relevant local authorities](http://www.dha.gov.za/index.php/civic-s
 
 %You’ll probably be asked for a CNI if you want to marry a South African citizen in South Africa. You’ll need to ask if there are any other documents the authorities will accept instead.%
 
-The UK doesn’t issue certificates of no impediment (CNIs) for marriages in Commonwealth countries. The British High Commission in Pretoria or the Consulate General in Cape Town can provide a letter to explain this if you’re asked to provide a CNI or a similar document to prove you’re allowed to marry.
+The UK doesn’t issue certificates of no impediment (CNIs) for marriages in Commonwealth countries. You can get a letter to explain this if you’re asked to provide a CNI or a similar document to prove you’re allowed to marry.
 
-Contact the High Commission and Consulate General to arrange to collect a letter.
+Book an appointment to collect a letter at the [British Consulate General in Cape Town](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-cape-town/providing-an-informative-note/slot_picker) or the [British High Commission in Pretoria](https://www.consular-appointments.service.gov.uk/fco/#!/british-high-commission-pretoria/providing-an-informative-note/slot_picker).
 
-$C
-<southafrica.consulate@fco.gov.uk>
-$C
-
-The letter must be signed and stamped by a member of the consular staff.
+The letter is free. If you can't go to an appointment, you can ask a friend or family member to make an appointment and collect it for you.
 
 ##Naturalisation of your partner if they move to the UK
 
