--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_other/_opposite_sex.govspeak.erb
@@ -7,7 +7,7 @@ The UK doesn’t issue certificates of no impediment (CNIs) for marriages in Com
 
 Book an appointment to collect a letter at the [British Consulate General in Cape Town](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-cape-town/providing-an-informative-note/slot_picker) or the [British High Commission in Pretoria](https://www.consular-appointments.service.gov.uk/fco/#!/british-high-commission-pretoria/providing-an-informative-note/slot_picker).
 
-The letter is free. If you can't go to an appointment, you can ask a friend or family member to make an appointment and collect the letter for you.
+The letter is free. If you can't go to an appointment, you can ask a friend or family member to make an appointment and collect it for you.
 
 ##Naturalisation of your partner if they move to the UK
 
