--- a/app/views/layouts/smart_answers.html.erb
+++ b/app/views/layouts/smart_answers.html.erb
@@ -7,6 +7,10 @@
   <% if page_is_under_ab_test?(@content_item) %>
     <%= education_navigation_variant.analytics_meta_tag.html_safe %>
   <% end %>
+
+  <% if is_benchmarking_tested_path? %>
+    <%= benchmark_child_maintenance_title_variant.analytics_meta_tag.html_safe %>
+  <% end %>
 <% end %>
 
 <% if should_present_new_navigation_view?(@content_item) %>
