--- a/lib/smart_answer_flows/calculate-your-child-maintenance/calculate_your_child_maintenance.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-child-maintenance/calculate_your_child_maintenance.govspeak.erb
@@ -2,6 +2,10 @@
   Child maintenance calculator
 <% end %>
 
+<% content_for :ab_title do %>
+  Estimate your child maintenance payments
+<% end %>
+
 <% content_for :meta_description do %>
   Work out the amount of child maintenance if you’re arranging it yourselves, or to get an idea of the statutory amounts from the Child Support Agency or Child Maintenance Service
 <% end %>
