--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_other/_same_sex.govspeak.erb
@@ -1,5 +1,5 @@
-Contact the [Embassy of Colombia](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
- 
+Contact the relevant local authorities in Colombia to find out about local marriage laws, including what documents you’ll need. 
+
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Colombia](/foreign-travel-advice/colombia) before making any plans.
  
 ##What you need to do
