--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_local/_opposite_sex.govspeak.erb
@@ -1,4 +1,4 @@
-Contact the [Embassy of Colombia](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+Contact the relevant local authorities in Colombia to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Colombia](/foreign-travel-advice/colombia) before making any plans.
 
@@ -6,22 +6,19 @@ Contact the [Embassy of Colombia](/government/publications/foreign-embassies-in-
 
 You’ll be asked to provide an affirmation or affidavit document to prove you’re allowed to marry.
 
-
 Make an appointment at the British embassy in Bogota to swear an affidavit (written statement of facts) that you’re free to marry. You’ll need to bring your passport and pay a fee.
 
 [Make an appointment at the embassy in Bogota.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-bogot%25C3%25A1/oaths-affirmations-and-affidavits/slot_picker)
 
 ## Fees
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
-
+Service | Fee
+- |-
+Affidavit or affirmation for marriage | £50
+ 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Colombia](/government/publications/colombia-consular-fees).
-
-<%=  render partial: 'how_to_pay.govspeak.erb',
-            locals: {calculator: calculator}%>
+ 
+You can pay by cash or credit card, but not by personal cheque.
 
 ###Legalisation and translation
 
